# netsmith

./: Cargo.toml  codebook.toml  readme.md  rustfmt.toml
.zed/: settings.json  tasks.json
macros/: Cargo.toml
macros/src/: lib.rs
src/: connection.rs  lib.rs
src/reliability/: bitmask.rs  detect.rs  mod.rs  resend.rs  seq.rs  strategy.rs
src/reliability/slide/: iter.rs  mod.rs  traits.rs
